[gd_scene load_steps=17 format=3 uid="uid://34wih7vw2otn"]

[ext_resource type="Script" path="res://Script/cerobong.gd" id="1_fb8yd"]
[ext_resource type="Texture2D" uid="uid://vo553ej3y8lu" path="res://Assets/rintangan/cerobong_brick.jpg" id="1_qnugr"]
[ext_resource type="Texture2D" uid="uid://cs5535414nbu0" path="res://Assets/rintangan/cerobong_texture-besi.jpg" id="2_5vmr7"]
[ext_resource type="PackedScene" uid="uid://b8230pyph27u" path="res://Scene/interactable.tscn" id="3_vpy8c"]
[ext_resource type="PackedScene" uid="uid://cbexyypcgpwa0" path="res://Scene/kunci.tscn" id="5_v17q7"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_qvu12"]
resource_name = "Material"
cull_mode = 2
albedo_texture = ExtResource("1_qnugr")
roughness = 0.5

[sub_resource type="ArrayMesh" id="ArrayMesh_fg7gd"]
_surfaces = [{
"aabb": AABB(-1, -1, -1, 2.00001, 2.00001, 2),
"format": 34896613377,
"index_count": 96,
"index_data": PackedByteArray(10, 0, 6, 0, 4, 0, 6, 0, 11, 0, 2, 0, 8, 0, 6, 0, 10, 0, 6, 0, 8, 0, 11, 0, 11, 0, 0, 0, 2, 0, 0, 0, 10, 0, 4, 0, 9, 0, 0, 0, 11, 0, 0, 0, 9, 0, 10, 0, 3, 0, 6, 0, 2, 0, 3, 0, 7, 0, 6, 0, 7, 0, 4, 0, 6, 0, 7, 0, 5, 0, 4, 0, 12, 0, 7, 0, 15, 0, 1, 0, 14, 0, 3, 0, 1, 0, 13, 0, 14, 0, 12, 0, 5, 0, 7, 0, 1, 0, 12, 0, 13, 0, 5, 0, 12, 0, 1, 0, 3, 0, 15, 0, 7, 0, 3, 0, 14, 0, 15, 0, 1, 0, 2, 0, 0, 0, 1, 0, 3, 0, 2, 0, 5, 0, 0, 0, 4, 0, 5, 0, 1, 0, 0, 0, 8, 0, 14, 0, 11, 0, 8, 0, 15, 0, 14, 0, 12, 0, 8, 0, 10, 0, 12, 0, 15, 0, 8, 0, 11, 0, 13, 0, 9, 0, 11, 0, 14, 0, 13, 0, 13, 0, 10, 0, 9, 0, 13, 0, 12, 0, 10, 0),
"name": "Material",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 16,
"vertex_data": PackedByteArray(254, 255, 254, 255, 0, 0, 0, 0, 254, 255, 0, 0, 0, 0, 0, 0, 254, 255, 254, 255, 255, 255, 0, 0, 254, 255, 0, 0, 255, 255, 0, 0, 0, 0, 254, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 254, 255, 255, 255, 0, 0, 0, 0, 0, 0, 255, 255, 0, 0, 102, 38, 254, 255, 152, 217, 0, 0, 152, 217, 254, 255, 102, 38, 0, 0, 102, 38, 254, 255, 102, 38, 0, 0, 152, 217, 254, 255, 152, 217, 0, 0, 102, 38, 0, 0, 102, 38, 0, 0, 152, 217, 0, 0, 102, 38, 0, 0, 152, 217, 0, 0, 152, 217, 0, 0, 102, 38, 0, 0, 152, 217, 0, 0)
}]
blend_shape_mode = 0

[sub_resource type="ArrayMesh" id="ArrayMesh_vn7or"]
resource_name = "cerobong_Cube"
_surfaces = [{
"aabb": AABB(-1, -1, -1, 2.00001, 2.00001, 2),
"attribute_data": PackedByteArray(223, 79, 255, 127, 157, 29, 69, 210, 24, 45, 0, 0, 51, 184, 255, 127, 166, 114, 255, 127, 223, 79, 0, 0, 223, 79, 255, 127, 157, 29, 185, 45, 24, 45, 255, 127, 108, 149, 255, 127, 166, 114, 255, 127, 223, 79, 255, 127, 166, 114, 255, 255, 223, 79, 0, 0, 48, 136, 69, 210, 108, 149, 255, 255, 51, 184, 255, 255, 166, 114, 0, 0, 166, 114, 255, 127, 223, 79, 255, 255, 48, 136, 185, 45, 108, 149, 255, 127, 108, 149, 255, 255, 166, 114, 255, 255, 252, 151, 0, 0, 51, 120, 104, 70, 252, 151, 255, 255, 252, 151, 255, 127, 252, 151, 255, 127, 153, 45, 150, 185, 252, 151, 255, 191, 51, 120, 150, 185, 252, 151, 255, 191, 252, 151, 255, 63, 252, 151, 255, 63, 153, 45, 104, 70, 252, 178, 203, 236, 252, 135, 255, 191, 252, 135, 255, 191, 252, 135, 255, 127, 252, 178, 50, 147, 252, 135, 255, 127, 252, 135, 255, 63, 164, 154, 50, 147, 252, 135, 255, 63, 164, 154, 203, 236, 252, 135, 0, 0, 252, 135, 255, 255),
"format": 34896613399,
"index_count": 96,
"index_data": PackedByteArray(31, 0, 20, 0, 14, 0, 20, 0, 35, 0, 7, 0, 25, 0, 20, 0, 31, 0, 20, 0, 25, 0, 35, 0, 35, 0, 1, 0, 7, 0, 1, 0, 31, 0, 14, 0, 29, 0, 1, 0, 35, 0, 1, 0, 29, 0, 31, 0, 10, 0, 19, 0, 6, 0, 10, 0, 23, 0, 19, 0, 21, 0, 12, 0, 18, 0, 21, 0, 15, 0, 12, 0, 36, 0, 22, 0, 45, 0, 3, 0, 43, 0, 9, 0, 3, 0, 40, 0, 43, 0, 36, 0, 16, 0, 22, 0, 3, 0, 36, 0, 40, 0, 16, 0, 36, 0, 3, 0, 9, 0, 45, 0, 22, 0, 9, 0, 43, 0, 45, 0, 5, 0, 8, 0, 2, 0, 5, 0, 11, 0, 8, 0, 17, 0, 0, 0, 13, 0, 17, 0, 4, 0, 0, 0, 24, 0, 44, 0, 34, 0, 24, 0, 46, 0, 44, 0, 38, 0, 26, 0, 32, 0, 38, 0, 47, 0, 26, 0, 33, 0, 39, 0, 27, 0, 33, 0, 42, 0, 39, 0, 41, 0, 30, 0, 28, 0, 41, 0, 37, 0, 30, 0),
"material": SubResource("StandardMaterial3D_qvu12"),
"name": "Material",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 48,
"vertex_data": PackedByteArray(254, 255, 254, 255, 0, 0, 255, 255, 254, 255, 254, 255, 0, 0, 255, 255, 254, 255, 254, 255, 0, 0, 84, 213, 254, 255, 0, 0, 0, 0, 84, 213, 254, 255, 0, 0, 0, 0, 255, 255, 254, 255, 0, 0, 0, 0, 84, 213, 254, 255, 254, 255, 255, 255, 255, 191, 254, 255, 254, 255, 255, 255, 255, 255, 254, 255, 254, 255, 255, 255, 84, 213, 254, 255, 0, 0, 255, 255, 84, 213, 254, 255, 0, 0, 255, 255, 255, 191, 254, 255, 0, 0, 255, 255, 84, 213, 0, 0, 254, 255, 0, 0, 84, 213, 0, 0, 254, 255, 0, 0, 255, 255, 0, 0, 254, 255, 0, 0, 255, 255, 0, 0, 0, 0, 0, 0, 84, 213, 0, 0, 0, 0, 0, 0, 84, 213, 0, 0, 0, 0, 0, 0, 255, 255, 0, 0, 254, 255, 255, 255, 84, 213, 0, 0, 254, 255, 255, 255, 255, 191, 0, 0, 254, 255, 255, 255, 255, 255, 0, 0, 0, 0, 255, 255, 84, 213, 0, 0, 0, 0, 255, 255, 84, 213, 0, 0, 0, 0, 255, 255, 255, 191, 102, 38, 254, 255, 152, 217, 0, 0, 102, 38, 254, 255, 152, 217, 255, 255, 102, 38, 254, 255, 152, 217, 170, 42, 152, 217, 254, 255, 102, 38, 170, 42, 152, 217, 254, 255, 102, 38, 255, 63, 152, 217, 254, 255, 102, 38, 255, 255, 102, 38, 254, 255, 102, 38, 255, 63, 102, 38, 254, 255, 102, 38, 255, 255, 102, 38, 254, 255, 102, 38, 170, 42, 152, 217, 254, 255, 152, 217, 170, 42, 152, 217, 254, 255, 152, 217, 0, 0, 152, 217, 254, 255, 152, 217, 255, 255, 102, 38, 0, 0, 102, 38, 84, 213, 102, 38, 0, 0, 102, 38, 255, 63, 102, 38, 0, 0, 102, 38, 170, 42, 152, 217, 0, 0, 102, 38, 170, 42, 152, 217, 0, 0, 102, 38, 84, 213, 152, 217, 0, 0, 102, 38, 255, 63, 152, 217, 0, 0, 152, 217, 170, 42, 152, 217, 0, 0, 152, 217, 84, 213, 152, 217, 0, 0, 152, 217, 0, 0, 102, 38, 0, 0, 152, 217, 84, 213, 102, 38, 0, 0, 152, 217, 0, 0, 102, 38, 0, 0, 152, 217, 170, 42, 255, 63, 255, 191, 255, 127, 255, 191, 170, 170, 84, 85, 84, 85, 85, 85, 255, 63, 255, 191, 170, 170, 84, 85, 255, 127, 255, 127, 255, 127, 255, 191, 170, 170, 84, 85, 85, 85, 84, 85, 255, 127, 255, 127, 170, 170, 84, 85, 84, 85, 170, 170, 255, 63, 255, 191, 255, 127, 255, 191, 84, 85, 170, 170, 85, 85, 84, 85, 255, 63, 255, 191, 84, 85, 170, 170, 255, 127, 255, 127, 255, 127, 255, 191, 84, 85, 170, 170, 85, 85, 84, 85, 255, 127, 255, 127, 255, 191, 255, 191, 255, 127, 255, 191, 170, 42, 170, 42, 84, 213, 84, 213, 255, 255, 255, 255, 255, 127, 255, 191, 255, 255, 255, 255, 255, 127, 255, 191, 170, 42, 170, 42, 84, 213, 84, 213, 255, 191, 255, 191, 255, 127, 255, 191, 84, 85, 84, 85, 255, 255, 255, 255, 170, 42, 170, 42, 84, 213, 84, 213, 84, 85, 85, 85, 255, 255, 255, 255, 84, 213, 84, 213, 84, 85, 84, 85, 255, 191, 255, 191, 85, 85, 84, 85, 255, 191, 255, 191, 170, 42, 170, 42)
}]
blend_shape_mode = 0
shadow_mesh = SubResource("ArrayMesh_fg7gd")

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_l8sst"]
data = PackedVector3Array(-0.7, 1, -0.7, -1, 1, 1, -1, 1, -1, -1, 1, 1, 0.7, 1, 0.7, 1, 1, 1, -0.7, 1, 0.7, -1, 1, 1, -0.7, 1, -0.7, -1, 1, 1, -0.7, 1, 0.7, 0.7, 1, 0.7, 0.7, 1, 0.7, 1, 1, -1, 1, 1, 1, 1, 1, -1, -0.7, 1, -0.7, -1, 1, -1, 0.7, 1, -0.7, 1, 1, -1, 0.7, 1, 0.7, 1, 1, -1, 0.7, 1, -0.7, -0.7, 1, -0.7, 1, -1, 1, -1, 1, 1, 1, 1, 1, 1, -1, 1, -1, -1, 1, -1, 1, 1, -1, -1, 1, -1, 1, -1, -1, 1, 1, -1, -1, 1, -1, -1, -1, -1, 1, -1, -0.7, -1, -0.7, -1, -1, 1, -0.7, -1, 0.7, 1, -1, -1, 0.7, -1, 0.7, 1, -1, 1, 1, -1, -1, 0.7, -1, -0.7, 0.7, -1, 0.7, -0.7, -1, -0.7, -1, -1, -1, -1, -1, 1, 1, -1, -1, -0.7, -1, -0.7, 0.7, -1, -0.7, -1, -1, -1, -0.7, -1, -0.7, 1, -1, -1, 1, -1, 1, -0.7, -1, 0.7, -1, -1, 1, 1, -1, 1, 0.7, -1, 0.7, -0.7, -1, 0.7, 1, -1, -1, 1, 1, 1, 1, 1, -1, 1, -1, -1, 1, -1, 1, 1, 1, 1, -1, -1, -1, 1, 1, -1, -1, 1, -1, -1, -1, -1, 1, -1, -1, 1, 1, -1, -0.7, 1, 0.7, 0.7, -1, 0.7, 0.7, 1, 0.7, -0.7, 1, 0.7, -0.7, -1, 0.7, 0.7, -1, 0.7, -0.7, -1, -0.7, -0.7, 1, 0.7, -0.7, 1, -0.7, -0.7, -1, -0.7, -0.7, -1, 0.7, -0.7, 1, 0.7, 0.7, 1, 0.7, 0.7, -1, -0.7, 0.7, 1, -0.7, 0.7, 1, 0.7, 0.7, -1, 0.7, 0.7, -1, -0.7, 0.7, -1, -0.7, -0.7, 1, -0.7, 0.7, 1, -0.7, 0.7, -1, -0.7, -0.7, -1, -0.7, -0.7, 1, -0.7)
backface_collision = true

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ql405"]
resource_name = "Material.001"
cull_mode = 2
albedo_texture = ExtResource("1_qnugr")
roughness = 0.5

[sub_resource type="ArrayMesh" id="ArrayMesh_ae5p1"]
_surfaces = [{
"aabb": AABB(-1, -1, -1, 2, 2.00001, 2),
"format": 34896613377,
"index_count": 96,
"index_data": PackedByteArray(9, 0, 1, 0, 0, 0, 12, 0, 5, 0, 4, 0, 12, 0, 13, 0, 5, 0, 9, 0, 8, 0, 1, 0, 12, 0, 9, 0, 13, 0, 8, 0, 9, 0, 12, 0, 0, 0, 4, 0, 5, 0, 0, 0, 1, 0, 4, 0, 6, 0, 12, 0, 4, 0, 6, 0, 14, 0, 12, 0, 14, 0, 8, 0, 12, 0, 14, 0, 10, 0, 8, 0, 11, 0, 2, 0, 10, 0, 6, 0, 15, 0, 14, 0, 6, 0, 7, 0, 15, 0, 3, 0, 2, 0, 11, 0, 6, 0, 3, 0, 7, 0, 2, 0, 3, 0, 6, 0, 10, 0, 15, 0, 11, 0, 10, 0, 14, 0, 15, 0, 2, 0, 4, 0, 1, 0, 2, 0, 6, 0, 4, 0, 10, 0, 1, 0, 8, 0, 10, 0, 2, 0, 1, 0, 13, 0, 7, 0, 5, 0, 13, 0, 15, 0, 7, 0, 15, 0, 9, 0, 11, 0, 15, 0, 13, 0, 9, 0, 5, 0, 3, 0, 0, 0, 5, 0, 7, 0, 3, 0, 11, 0, 0, 0, 3, 0, 11, 0, 9, 0, 0, 0),
"name": "Material.001",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 16,
"vertex_data": PackedByteArray(255, 239, 254, 255, 255, 15, 0, 0, 255, 255, 254, 255, 0, 0, 0, 0, 255, 255, 0, 0, 0, 0, 0, 0, 255, 239, 0, 0, 255, 15, 0, 0, 255, 255, 254, 255, 255, 255, 0, 0, 255, 239, 254, 255, 255, 239, 0, 0, 255, 255, 0, 0, 255, 255, 0, 0, 255, 239, 0, 0, 255, 239, 0, 0, 0, 0, 254, 255, 0, 0, 0, 0, 255, 15, 254, 255, 255, 15, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 255, 15, 0, 0, 255, 15, 0, 0, 0, 0, 254, 255, 255, 255, 0, 0, 255, 15, 254, 255, 255, 239, 0, 0, 0, 0, 0, 0, 255, 255, 0, 0, 255, 15, 0, 0, 255, 239, 0, 0)
}]
blend_shape_mode = 0

[sub_resource type="ArrayMesh" id="ArrayMesh_jd0ow"]
resource_name = "cerobong_Cube_001"
_surfaces = [{
"aabb": AABB(-1, -1, -1, 2, 2.00001, 2),
"attribute_data": PackedByteArray(255, 159, 255, 127, 255, 159, 255, 127, 255, 163, 255, 123, 255, 159, 255, 127, 255, 159, 255, 127, 255, 159, 255, 127, 255, 95, 255, 127, 255, 95, 255, 127, 255, 95, 255, 127, 255, 95, 255, 127, 255, 91, 255, 123, 255, 95, 255, 127, 255, 159, 255, 63, 255, 159, 255, 63, 255, 159, 255, 63, 255, 159, 255, 63, 255, 159, 255, 63, 255, 163, 255, 67, 255, 95, 255, 63, 255, 95, 255, 63, 255, 95, 255, 63, 255, 95, 255, 63, 255, 91, 255, 67, 255, 95, 255, 63, 255, 159, 255, 191, 255, 159, 255, 191, 255, 223, 255, 127, 255, 159, 255, 191, 255, 219, 255, 123, 255, 159, 255, 191, 255, 95, 255, 191, 255, 31, 255, 127, 255, 95, 255, 191, 255, 35, 255, 123, 255, 95, 255, 191, 255, 95, 255, 191, 255, 159, 255, 255, 255, 159, 0, 0, 255, 223, 255, 63, 255, 159, 0, 0, 255, 219, 255, 67, 255, 159, 255, 255, 255, 95, 255, 255, 255, 31, 255, 63, 255, 95, 0, 0, 255, 35, 255, 67, 255, 95, 0, 0, 255, 95, 255, 255),
"format": 34896613399,
"index_count": 96,
"index_data": PackedByteArray(28, 0, 4, 0, 2, 0, 38, 0, 17, 0, 13, 0, 38, 0, 40, 0, 17, 0, 28, 0, 26, 0, 4, 0, 38, 0, 28, 0, 40, 0, 26, 0, 28, 0, 38, 0, 2, 0, 13, 0, 17, 0, 2, 0, 4, 0, 13, 0, 19, 0, 37, 0, 12, 0, 19, 0, 44, 0, 37, 0, 42, 0, 24, 0, 36, 0, 42, 0, 30, 0, 24, 0, 33, 0, 6, 0, 31, 0, 18, 0, 45, 0, 43, 0, 18, 0, 22, 0, 45, 0, 10, 0, 6, 0, 33, 0, 18, 0, 10, 0, 22, 0, 6, 0, 10, 0, 18, 0, 31, 0, 45, 0, 33, 0, 31, 0, 43, 0, 45, 0, 8, 0, 14, 0, 5, 0, 8, 0, 20, 0, 14, 0, 32, 0, 3, 0, 25, 0, 32, 0, 7, 0, 3, 0, 39, 0, 23, 0, 16, 0, 39, 0, 46, 0, 23, 0, 47, 0, 29, 0, 35, 0, 47, 0, 41, 0, 29, 0, 15, 0, 9, 0, 0, 0, 15, 0, 21, 0, 9, 0, 34, 0, 1, 0, 11, 0, 34, 0, 27, 0, 1, 0),
"material": SubResource("StandardMaterial3D_ql405"),
"name": "Material.001",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 48,
"vertex_data": PackedByteArray(255, 239, 254, 255, 255, 15, 170, 42, 255, 239, 254, 255, 255, 15, 255, 63, 255, 239, 254, 255, 255, 15, 255, 255, 255, 255, 254, 255, 0, 0, 255, 255, 255, 255, 254, 255, 0, 0, 255, 255, 255, 255, 254, 255, 0, 0, 84, 213, 255, 255, 0, 0, 0, 0, 255, 191, 255, 255, 0, 0, 0, 0, 255, 255, 255, 255, 0, 0, 0, 0, 84, 213, 255, 239, 0, 0, 255, 15, 170, 42, 255, 239, 0, 0, 255, 15, 255, 191, 255, 239, 0, 0, 255, 15, 255, 63, 255, 255, 254, 255, 255, 255, 255, 191, 255, 255, 254, 255, 255, 255, 255, 255, 255, 255, 254, 255, 255, 255, 84, 213, 255, 239, 254, 255, 255, 239, 170, 42, 255, 239, 254, 255, 255, 239, 0, 0, 255, 239, 254, 255, 255, 239, 255, 255, 255, 255, 0, 0, 255, 255, 255, 191, 255, 255, 0, 0, 255, 255, 255, 191, 255, 255, 0, 0, 255, 255, 84, 213, 255, 239, 0, 0, 255, 239, 170, 42, 255, 239, 0, 0, 255, 239, 255, 191, 255, 239, 0, 0, 255, 239, 0, 0, 0, 0, 254, 255, 0, 0, 84, 213, 0, 0, 254, 255, 0, 0, 255, 255, 0, 0, 254, 255, 0, 0, 255, 255, 255, 15, 254, 255, 255, 15, 255, 63, 255, 15, 254, 255, 255, 15, 255, 255, 255, 15, 254, 255, 255, 15, 170, 42, 0, 0, 0, 0, 0, 0, 84, 213, 0, 0, 0, 0, 0, 0, 255, 191, 0, 0, 0, 0, 0, 0, 255, 255, 255, 15, 0, 0, 255, 15, 255, 191, 255, 15, 0, 0, 255, 15, 255, 63, 255, 15, 0, 0, 255, 15, 170, 42, 0, 0, 254, 255, 255, 255, 84, 213, 0, 0, 254, 255, 255, 255, 255, 191, 0, 0, 254, 255, 255, 255, 255, 255, 255, 15, 254, 255, 255, 239, 0, 0, 255, 15, 254, 255, 255, 239, 255, 255, 255, 15, 254, 255, 255, 239, 170, 42, 0, 0, 0, 0, 255, 255, 84, 213, 0, 0, 0, 0, 255, 255, 255, 191, 0, 0, 0, 0, 255, 255, 255, 191, 255, 15, 0, 0, 255, 239, 255, 191, 255, 15, 0, 0, 255, 239, 0, 0, 255, 15, 0, 0, 255, 239, 170, 42, 84, 213, 84, 213, 255, 255, 255, 255, 255, 127, 255, 191, 255, 191, 255, 191, 255, 127, 255, 191, 170, 42, 170, 42, 0, 0, 255, 127, 255, 191, 255, 191, 170, 42, 170, 42, 84, 213, 84, 213, 0, 0, 255, 127, 255, 255, 255, 255, 255, 255, 255, 255, 255, 127, 255, 191, 170, 42, 170, 42, 84, 213, 84, 213, 255, 191, 255, 191, 255, 127, 255, 191, 0, 0, 255, 127, 255, 255, 255, 255, 170, 42, 170, 42, 84, 213, 84, 213, 0, 0, 255, 127, 255, 191, 255, 191, 84, 213, 84, 213, 255, 191, 255, 191, 255, 127, 255, 191, 255, 255, 255, 255, 255, 127, 255, 191, 170, 42, 170, 42, 84, 213, 84, 213, 0, 0, 255, 127, 255, 191, 255, 191, 0, 0, 255, 127, 255, 255, 255, 255, 170, 42, 170, 42, 84, 213, 84, 213, 255, 255, 255, 255, 255, 127, 255, 191, 255, 191, 255, 191, 255, 127, 255, 191, 170, 42, 170, 42, 84, 213, 84, 213, 0, 0, 255, 127, 255, 255, 255, 255, 0, 0, 255, 127, 255, 191, 255, 191, 170, 42, 170, 42)
}]
blend_shape_mode = 0
shadow_mesh = SubResource("ArrayMesh_ae5p1")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_kkhmh"]
resource_name = "Material.005"
cull_mode = 2
albedo_texture = ExtResource("2_5vmr7")
roughness = 0.5

[sub_resource type="ArrayMesh" id="ArrayMesh_u8wx3"]
_surfaces = [{
"aabb": AABB(-1, 0, -1, 2, 1e-05, 2.00001),
"format": 34896613377,
"index_count": 6,
"index_data": PackedByteArray(0, 0, 3, 0, 1, 0, 0, 0, 2, 0, 3, 0),
"name": "Material.005",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 4,
"vertex_data": PackedByteArray(0, 0, 0, 0, 254, 255, 0, 0, 255, 255, 0, 0, 254, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 255, 255, 0, 0, 0, 0, 0, 0)
}]
blend_shape_mode = 0

[sub_resource type="ArrayMesh" id="ArrayMesh_qcduk"]
resource_name = "cerobong_Plane"
_surfaces = [{
"aabb": AABB(-1, 0, -1, 2, 1e-05, 2.00001),
"attribute_data": PackedByteArray(0, 0, 255, 255, 255, 255, 255, 255, 0, 0, 0, 0, 255, 255, 0, 0),
"format": 34896613399,
"index_count": 6,
"index_data": PackedByteArray(0, 0, 3, 0, 1, 0, 0, 0, 2, 0, 3, 0),
"material": SubResource("StandardMaterial3D_kkhmh"),
"name": "Material.005",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 4,
"vertex_data": PackedByteArray(0, 0, 0, 0, 254, 255, 255, 191, 255, 255, 0, 0, 254, 255, 255, 191, 0, 0, 0, 0, 0, 0, 255, 191, 255, 255, 0, 0, 0, 0, 255, 191, 255, 255, 255, 127, 255, 255, 255, 127, 255, 255, 255, 127, 255, 255, 255, 127)
}]
blend_shape_mode = 0
shadow_mesh = SubResource("ArrayMesh_u8wx3")

[sub_resource type="BoxShape3D" id="BoxShape3D_l8o7m"]
size = Vector3(1, 0.683594, 1)

[node name="Cerobong" type="Node3D"]
script = ExtResource("1_fb8yd")

[node name="atas" type="MeshInstance3D" parent="."]
transform = Transform3D(0.5, 0, 0, 0, 0.1, 0, 0, 0, 0.5, 0, 0.527776, 0)
mesh = SubResource("ArrayMesh_vn7or")
skeleton = NodePath("")

[node name="StaticBody3D" type="StaticBody3D" parent="atas"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="atas/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_l8sst")

[node name="bawah" type="MeshInstance3D" parent="."]
transform = Transform3D(0.4, 0, 0, 0, 0.25, 0, 0, 0, 0.4, 0, 0.190475, 0)
mesh = SubResource("ArrayMesh_jd0ow")
skeleton = NodePath("")

[node name="Plane" type="MeshInstance3D" parent="."]
transform = Transform3D(0.2, 0, 0, 0, 0, -0.1, 0, 1, 0, 0, 0.224222, -0.4008)
mesh = SubResource("ArrayMesh_qcduk")
skeleton = NodePath("")

[node name="Interactable" parent="." instance=ExtResource("3_vpy8c")]

[node name="CollisionShape3D" parent="Interactable" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.283866, 0)
shape = SubResource("BoxShape3D_l8o7m")

[node name="K" parent="." instance=ExtResource("5_v17q7")]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 1.30108, 0)
visible = false
script = null

[connection signal="focused" from="Interactable" to="." method="_on_interactable_focused"]
[connection signal="interacted" from="Interactable" to="." method="_on_interactable_interacted"]
[connection signal="unfocused" from="Interactable" to="." method="_on_interactable_unfocused"]

[editable path="Interactable"]
